// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GotenTextField snapshots type email 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <label
      className="labelInput"
    >
      Email 
    </label>
    <input
      className="undefined"
      onChange={[Function]}
      type="email"
      value=""
    />
  </div>
</div>
`;

exports[`GotenTextField snapshots type invalid 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <label
      className="labelInput"
    >
      Invalid 
    </label>
    <input
      className="undefined"
      onChange={[Function]}
      type="invalid"
      value=""
    />
  </div>
</div>
`;

exports[`GotenTextField snapshots type number 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <label
      className="labelInput"
    >
      Number 
    </label>
    <input
      className="undefined"
      onChange={[Function]}
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`GotenTextField snapshots type password 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <label
      className="labelInput"
    >
      Password 
    </label>
    <input
      className="undefined"
      onChange={[Function]}
      type="password"
      value=""
    />
  </div>
</div>
`;

exports[`GotenTextField snapshots type text 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <label
      className="labelInput"
    >
      Text 
    </label>
    <input
      className="undefined"
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`GotenTextField snapshots type time 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <label
      className="labelInput"
    >
      Time 
    </label>
    <input
      className="undefined"
      onChange={[Function]}
      type="time"
      value=""
    />
  </div>
</div>
`;

exports[`GotenTextField snapshots type url 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <label
      className="labelInput"
    >
      Url 
    </label>
    <input
      className="undefined"
      onChange={[Function]}
      type="url"
      value=""
    />
  </div>
</div>
`;
